Blogr Landing Page Update

--- a/Projetos/Blogr-Landing-Page/style.css
+++ b/Projetos/Blogr-Landing-Page/style.css
@@ -2,6 +2,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Ubuntu', sans-serif;
+    background-color: #fafafa;
 }
 
 nav, .presentation {
@@ -28,8 +29,55 @@ nav button {
     border: none;
     color: #fff;
     font-weight: 600;
+    justify-content: center;
 }
-
+.login-zone button:nth-child(1){
+    transition: 0.3s;
+}
+.login-zone button:nth-child(2){
+    background-color: #fff;
+    padding: 10px;
+    width: 120px;
+    text-align: center;
+    border-radius: 50px;
+    color: #fe4e5a;
+    transition: 0.3s;
+}
+.login-zone button:nth-child(2):hover{
+    color: #fff;
+    background-color: #fe4e5a;
+    cursor: pointer;
+}
+.login-zone button:nth-child(1):hover{
+    color: #ffd0d2;
+    cursor: pointer;
+}
+.presentation button:nth-child(1){
+    background-color: #fff;
+    padding: 10px;
+    width: 120px;
+    text-align: center;
+    border-radius: 50px;
+    color: #fe4e5a;
+    transition: 0.3s;
+    border: none;
+    margin-right: 10px;
+}
+.presentation button:nth-child(2){
+    background-color: #ffffff00;
+    padding: 10px;
+    width: 120px;
+    text-align: center;
+    border-radius: 50px;
+    color: #fff;
+    transition: 0.3s;
+    outline: 1px solid #fff;
+    border: none;
+    outline-offset: -1px;
+}
+.presentation div {
+    margin: 20px 0;
+}
 .product-list, .company-list, .connect-list {
     visibility: hidden;
     opacity: 0;
@@ -75,10 +123,52 @@ nav button {
     background-position: center;
     background-repeat: no-repeat;
 }
-
-
 .container {
     background-position:left;
     background-image: url(./images/bg-pattern-intro-desktop.svg), linear-gradient(to right, hsl(13, 100%, 72%), hsl(353, 100%, 62%));
     border-bottom-left-radius: 50px;
+}
+.sections {
+    display: flex;
+    justify-content: center;
+}
+.section div:nth-child(1){
+    position: relative;
+}
+.section h3, .section h2 {
+    color: hsl(208, 49%, 24%);
+}
+.section h2 {
+    font-size: xx-large;
+    text-align: center;
+    margin-top: 100px;
+}
+.section p {
+    line-height: 40px;
+}
+.section div:nth-child(1) img  {
+    position: absolute;
+    right: -300px;
+    top: -50px;
+    user-select: none;
+    pointer-events: none;
+}
+.section div:nth-child(1) div  {
+    width: 40%;
+    padding: 50px;
+    padding-left: 0;
+}
+
+.section div:nth-child(2)  {
+    display: flex;
+    padding: 50px;
+    background-image:url(./images/bg-pattern-circles.svg), linear-gradient(to right, hsl(237, 17%, 21%), hsl(237, 23%, 32%) );
+    background-repeat: no-repeat;
+    background-position: bottom left;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+}
+.section div:nth-child(2) h2, .section div:nth-child(2) p {
+    color: #fff;
+    width: 40%;
 }
